# edu-pi

./: README.md  pi.cabal
app/: Main.hs
src/: Pi.hs  Report.hs
